# curl-simple-https

./: .docopt  .editorconfig  CMakeLists.txt  CurlSimpleHttpsConfig.cmake.in  CurlSimpleHttpsConfig.h.in  Dockerfile  Dockerfile.debian  LICENSE-APACHE  LICENSE-MIT  README.md  README.txt  Welcome.txt  vcpkg.json
.github/workflows/: build-and-test.yml  linux-Windows-macOS.yml
cmake/: CTestConfig.cmake  Config.cmake.in  CurlSimpleHttpsConfig.h.in  FindCurlCustom.cmake  MultiCPackConfig.cmake  config.h.in
cmake/modules/: FindCurlCustom.cmake
curl_simple_https/: CMakeLists.txt  curl_simple_https.c  curl_simple_https.h
libcurl-simple-https/: CMakeLists.txt  curl_simple_https.c  curl_simple_https.h
libcurl-simple-https/curl-simple-https/: CMakeLists.txt  cli.c  cli.h  main.c
libcurl_simple_https/: CMakeLists.txt  curl_simple_https.c  curl_simple_https.h
libcurl_simple_https/curl_simple_https/: CMakeLists.txt  cli.c  cli.h  main.c
src/: curl_simple_https.c  curl_simple_https.h
